--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -68,3 +68,59 @@
     color: var(--gray-400);
     line-height: 1.6;
 }
+
+.commentForm {
+    width: 100%;
+    margin-top: 1.5rem;
+    padding-top: 1.5rem;
+    border-top: 1px solid var(--gray-600);
+}
+
+.commentForm>strong {
+    line-height: 1.6;
+    color: var(--gray-100);
+}
+
+.commentForm textarea {
+    background: var(--gray-900);
+    width: 100%;
+    height: 6rem;
+    padding: 1rem;
+    margin-top: 1rem;
+    border: 0;
+    border-radius: 8px;
+    color: var(--gray-100);
+    line-height: 1.4;
+    resize: none;
+}
+
+.commentForm footer {
+    visibility: hidden;
+    max-height: 0;
+}
+
+.commentForm:focus-within footer {
+    visibility: visible;
+    max-height: none;
+}
+
+.commentForm button[type="submite"] {
+    padding: 1rem 1.5rem;
+    margin-top: 1rem;
+    border: 0;
+    border-radius: 8px;
+    background: var(--green-500);
+    color: var(--white);
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color .2s;
+
+}
+
+.commentForm button[type="submite"]:hover {
+    background: var(--green-300);
+}
+
+.commentList {
+    margin-top: 2rem;
+}
